@@ -3,6 +3,9 @@ Changelog
 
 2.4.dev0 - (unreleased)
 -----------------------
+* Feature: Changed widget for thematic_domain and institutional_domain to 
+  MultiCheckBoxVocabularyWidget
+  [olimpiurob refs #24190]
 * Feature: Added LDAP specific properties to local users
   [olimpiurob refs #24190]
 * Upgrade step: (manual) Enable user registration in @@security-controlpanel. Tick
